@@ -1,3 +1,0 @@
-Site URL: https://fuxmovies.com/
-Contact: https://fuxmovies.com/contact-us.html
-DMCA: https://fuxmovies.com/dmca.html
