@@ -1,3 +1,0 @@
-Site URL: https://pornvid69.com/
-Contact: https://pornvid69.com/contact/
-DMCA: https://pornvid69.com/dmca/
