@@ -1,3 +1,8 @@
 [B]Version 1.1.114[/B]
 - pornmz - fix listing, thumbnails, pagination
 - netflixporno - fix listing
+- goodporn - removed
+- fuxmovies - removed
+- pornvid69 - removed
+
+
